@@ -9,7 +9,7 @@
 ## Title: Baud Bag
 ## Title-zhCN: 背包整合 Baud Bag
 ## Title-zhTW: 背包整合 Baud Bag
-## Version: 4.1.1 beta 1
+## Version: 4.1.1 beta 2
 
 Localization.lua
 BaudBagFunctions.lua
